--- a/fitness.css
+++ b/fitness.css
@@ -43,7 +43,7 @@ img {
   /* border: 1px solid red; */
   box-shadow: 0 2px 10px rgba(0,0,0,0.1) inset;
   border-radius: 10px;
-  padding: 3px;
+  padding: 3px 12px;
   margin-top: 20px;
   display: none;
 }
